--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/vision": "^3.42.1",
     "next": "14.2.3",
+    "next-sanity": "^9.0.20",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "sanity": "^3.42.1"
   },
   "devDependencies": {
     "@types/node": "^20",
