--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@sanity/vision": "^3.42.1",
     "next": "14.2.3",
+    "next-auth": "^4.24.7",
+    "next-auth-sanity": "^1.5.3",
     "next-sanity": "^9.0.20",
     "react": "^18",
     "react-dom": "^18",
